--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,11 @@ name = "terminal"
 path = "./src/terminal.rs"
 
 [[bin]]
-name = "sv"
-path = "./src/sv.rs"
+name = "logger"
+path = "./src/logger.rs"
 
 [dependencies]
 chrono = "0.4.38"
 crossterm = "0.27.0"
+env_logger = "0.11.5"
+log = "0.4.22"
